--- a/style.css
+++ b/style.css
@@ -8,16 +8,17 @@ h1 {
     padding: 20px;
 }
 
+button {
+    padding: 10px;
+    display: flex;
+    margin: auto;
+    justify-content: center;
+}
+
 #grid {
     margin: 10px auto;
     border: 2px solid red;
-    height: 900px;
-    width: 900px;
+    height: 850px;
+    width: 850px;
     display: grid;
-    grid-template-columns: repeat(16, 1fr);
-    grid-template-rows: repeat(16, 1fr);
-}
-
-.cell {
-    border: 1px solid lime;
 }
