--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ button {
 
 #grid {
     margin: 10px auto;
-    border: 2px solid red;
+    border: 2px solid black;
     height: 850px;
     width: 850px;
     display: grid;
